# ckc

./: .gitattributes  .gitignore  .ignore  .rgignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  SPEC.md  justfile  mise.toml  pyproject.toml  rust-toolchain.toml
.agent/: PROMPT.md  cnl-queue.md  context.sh  context_window.py  lexgate.sh  memory.md  prompt.md  protocol-plan.md  protocol-review.md  roadmap.md  wip-3a.2a.patch  wip-4.1a.patch  wip-cassette-cli.rs.txt  wip-cassette-core.rs.txt  wip-cli-runner.4.1b.2b.patch  wip-direct-smt-5.txt  wip-direct-smt.txt  wip-metrics-m2-1.txt  wip-metrics.rs.txt  wip-model-adapter.2a.patch  wip-report-m2.1.txt  wip-report-m2.1a.diff  wip-report-m2.1b.diff  wip-schemas-export.rs.txt  wip-single-ir-fill.patch  wip-single-ir-fill.txt  wip-stage-model-fill.2.rs.txt  wip-stage-model-fill.edits.patch  wip-stage-model-fill.rs.txt
.claude/: loop.md  settings.json
.serena/: project.yml
certs/: assurance_seed.json  certificate_graph.json  cvc5_norm_conflict.proof
clinicalcnl/: CKC_FORK.md
crates/ckc-cli/: Cargo.toml  build.rs
crates/ckc-cli/src/: cassette.rs  dispatch.rs  emit.rs  extract.rs  lib.rs  main.rs  manifest.rs  manifests.rs  metrics.rs  model.rs  model_fill.rs  normalize.rs  pipeline.rs  registry_check.rs  replay.rs  report.rs  rules.rs  run.rs  schema.rs  segment.rs  shell.rs  trace.rs
crates/ckc-cli/src/replay/: command.rs
crates/ckc-cli/src/trace/: command.rs
crates/ckc-cli/tests/: cli_shell.rs  compile.rs  conflicts.rs  demo.rs  manifest_golden.rs  model_cassette.rs  model_live.rs  recorded_run.rs  replay.rs  replay_cli.rs  replay_schema.rs  report.rs  run_oracle.rs  scaffold.rs  substrate.rs  verify.rs
crates/ckc-cli/tests/fixtures/: bounded_verdict.schema.json
crates/ckc-cli/tests/fixtures/cassettes/route.direct_smt/group.m1_conflict.deontic/: seed-42.json
crates/ckc-cli/tests/fixtures/cassettes/route.direct_smt/group.m1_conflict.overlap/: seed-42.json
crates/ckc-cli/tests/fixtures/cassettes/route.direct_smt/group.m1_no_conflict.deontic/: seed-42.json
crates/ckc-cli/tests/fixtures/cassettes/route.direct_smt/group.m1_no_conflict.overlap/: seed-42.json
crates/ckc-cli/tests/fixtures/cassettes/route.direct_smt/group.m2_direct_schema.overlap/: seed-17894217328592812498.json  seed-91.json
crates/ckc-cli/tests/fixtures/cassettes/route.direct_smt/group.m2_direct_syntax.deontic/: seed-90.json
crates/ckc-cli/tests/fixtures/cassettes/route.direct_smt/group.m2_direct_syntax.overlap/: seed-90.json
crates/ckc-cli/tests/fixtures/cassettes/route.fixture/test_source.fixture/: seed-42.json
crates/ckc-cli/tests/fixtures/cassettes/route.single_ir/test_source.m1_control/: seed-42.json
crates/ckc-cli/tests/fixtures/cassettes/route.single_ir/test_source.m1_guideline_a/: seed-17360999193197444373.json  seed-42.json  seed-5718913436695043505.json  seed-97.json  seed-98.json  seed-99.json
crates/ckc-cli/tests/fixtures/cassettes/route.single_ir/test_source.m1_guideline_b/: seed-42.json
crates/ckc-compile/: Cargo.toml
crates/ckc-compile/src/: asp.rs  datalog.rs  lean.rs  lib.rs  modelcheck.rs  smt.rs
crates/ckc-compile/tests/: asp_defeasible.rs  asp_event_calculus.rs  datalog_priority.rs  lean_theorem.rs  manifest.rs  modelcheck_alloy.rs  modelcheck_tla.rs  persistence.rs  portfolio.rs  scaffold.rs  smt_decision_table.rs  smt_norm_conflict.rs  smt_repair.rs  support.rs
crates/ckc-core/: Cargo.toml
crates/ckc-core/fixtures/: policy_vectors.json  unicode_policy_manifest.json
crates/ckc-core/src/: artifact.rs  bundle.rs  canon.rs  canonical.rs  cassette.rs  clinical.rs  compile.rs  enums.rs  envelope.rs  evidence.rs  grounding.rs  hash.rs  id.rs  ir.rs  lib.rs  nf.rs  outcome.rs  plans.rs  policy.rs  profile.rs  registry.rs  scalar.rs  source.rs  source_linkage.rs  strings.rs  term.rs  verify.rs  wrapper.rs
crates/ckc-core/tests/: fixtures_m1.rs  fixtures_v1.rs  golden.rs  golden_nf.rs  nf_proptest.rs  prop.rs  research_clinical_formalization.rs  research_source_corpus.rs  research_structured_artifacts.rs  research_terminology.rs  t_canonical_bytes.rs  t_unicode_idempotency.rs  test_sources_m1.rs  toy_clinical_formalization.rs  toy_source_corpus.rs  toy_structured_artifacts.rs  toy_terminology.rs
crates/ckc-retrieve/: Cargo.toml
crates/ckc-retrieve/src/: lib.rs  metrics.rs  sparse.rs
crates/ckc-retrieve/tests/: fixtures.rs  golden.rs  persistence.rs  pipeline.rs  sparse_index.rs
crates/ckc-smt/: Cargo.toml
crates/ckc-smt/src/: artifact.rs  emit.rs  lib.rs  plan.rs  result.rs  verdict.rs  verify.rs
crates/ckc-store/: Cargo.toml
crates/ckc-store/src/: lib.rs
crates/ckc-store/tests/: golden_manifest.rs  research_fixture_bundle.rs  toy_fixture_bundle.rs
crates/ckc-term/: Cargo.toml
crates/ckc-term/src/: alignment.rs  egraph.rs  lib.rs  rdf.rs  shacl.rs
crates/ckc-term/tests/: gen_fixtures.rs  integration_06.rs
docs/: agentlanguages.md  automated-reasoning-constraint-solving.md  clinical-rule-semantics-temporal-reasoning.md  cnl-attempto.md  cnl-design-codex.md  cnl-landscape.md  cnl-multilingual-ja.md  computable-guideline-ir-cds-standards.md  evaluation-clinical-validation.md  evaluation.md  fable-prompting.md  formal-specification-proof-assistants.md  formal-targets.md  guideline-ir.md  information-retrieval-rag.md  japan-clinical-guideline-terminology.md  japan-sources.md  language-models-agentic-autoformalization.md  model-routes.md  ontologies-rdf-terminology-engineering.md  poc-archive.md  regulatory-compliance-assurance.md  rule-semantics.md  scoped-commits.md  solvers.md
poc/: .gitignore  DESIGN.md  README.md  dataset.json  run_m2.py
registry/: candidates.yaml  corpora.yaml  evaluators.yaml  experiments.yaml  gates.yaml  indexes.yaml  methods.yaml  policies.yaml  prompts.yaml  schemas.yaml  source_processors.yaml
schemas/: action.schema.json  analyzer_config.schema.json  argument_graph.schema.json  artifact_envelope.schema.json  artifact_kind.schema.json  artifact_meta.schema.json  assurance_node.schema.json  assurance_seed.schema.json  audit_trace.schema.json  (+42 more)
(+274 files in other folders)
