# CKC workspace (SPEC §3). Remaining crates land with their V1 units:
# crates/{ckc-smt,ckc-cli}.
[workspace]
resolver = "3"
members = ["crates/ckc-core"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"

# Single source of truth for external dependency versions; exact resolved
# versions live in Cargo.lock (SPEC §1).
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
num-bigint = "0.4"
num-rational = "0.4"
serde_json = "1"
unicode-normalization = "0.1"
sha2 = "0.11"
