# CKC workspace (SPEC §3). Remaining crate lands with its V1 unit:
# crates/ckc-smt.
[workspace]
resolver = "3"
members = ["crates/ckc-cli", "crates/ckc-core"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"

# Single source of truth for external dependency versions; exact resolved
# versions live in Cargo.lock (SPEC §1).
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
# Maintained pure-Rust serde YAML (serde_yaml and its early forks are
# archived); 0.0.x caret-pins the exact version, Cargo.lock resolves it.
serde-saphyr = "0.0.27"
num-bigint = "0.4"
num-rational = "0.4"
serde_json = "1"
unicode-normalization = "0.1"
sha2 = "0.11"
tempfile = "3"
# Deterministic html5ever DOM for the extract stage; `errors` gates
# Html::errors (stage-extract.1 pin).
scraper = { version = "0.27", default-features = false, features = ["errors", "deterministic"] }
# scraper's arena, unexported by scraper; names NodeRef in extract signatures.
ego-tree = "0.11"
