# CKC workspace (SPEC §3).
[workspace]
resolver = "3"
members = ["crates/ckc-cli", "crates/ckc-core", "crates/ckc-smt"]

[workspace.package]
edition = "2024"
# GPL-3.0-or-later (2026-07-12, was Apache-2.0): clears copyleft-licensed
# lexical resources (Clex-class, GPL-3.0) for committed derived rows — SPEC §11.
license = "GPL-3.0-or-later"

# Single source of truth for external dependency versions; exact resolved
# versions live in Cargo.lock (SPEC §1).
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
# Maintained pure-Rust serde YAML (serde_yaml and its early forks are
# archived); 0.0.x caret-pins the exact version, Cargo.lock resolves it.
serde-saphyr = "0.0.27"
num-bigint = "0.4"
num-rational = "0.4"
serde_json = "1"
# Dev-only JSON-Schema validation oracle (draft 2020-12) for the exported
# `schemas/`. `default-features = false` drops the remote ($ref) resolvers and
# TLS that the self-contained ClinicalIR schema never needs, while keeping the
# core `validator_for`/`Validator::is_valid` surface the oracle uses.
jsonschema = { version = "0.46", default-features = false }
# Dev-only Earley BNF grammar recognizer oracle for the exported
# `schemas/smt_query.grammar`. `default-features = false` drops the serde
# grammar-(de)serialize feature the recognizer never uses, keeping `Grammar`
# parsing + full-match `parse_input`.
bnf = { version = "0.6", default-features = false }
unicode-normalization = "0.1"
sha2 = "0.11"
tempfile = "3"
# Deterministic html5ever DOM for the extract processing_stage; `errors` gates
# Html::errors (stage-extract.1 pin).
scraper = { version = "0.27", default-features = false, features = ["errors", "deterministic"] }
# scraper's arena, unexported by scraper; names NodeRef in extract signatures.
ego-tree = "0.11"
