[package]
name = "ckc-cli"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "ckc"
path = "src/main.rs"

[dependencies]
ckc-core = { path = "../ckc-core" }
ckc-compile = { path = "../ckc-compile" }
ckc-verify = { path = "../ckc-verify" }
ckc-conflict = { path = "../ckc-conflict" }
ckc-term = { path = "../ckc-term" }
ckc-retrieve = { path = "../ckc-retrieve" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
