[package]
name = "ckc-compile"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
ckc-core = { path = "../ckc-core" }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
ckc-store = { path = "../ckc-store" }
tempfile = { workspace = true }
