# ckc-core — durable typed core (SPEC §3 crate table); built up unit by unit.
[package]
name = "ckc-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde-saphyr.workspace = true
num-bigint.workspace = true
num-rational.workspace = true
unicode-normalization.workspace = true
sha2.workspace = true

[dev-dependencies]
serde_json.workspace = true
