[package]
name = "ckc-retrieve"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
ckc-core = { path = "../ckc-core" }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
anyhow = { workspace = true }
tantivy = { workspace = true }
lindera = { workspace = true }
lindera-tantivy = { workspace = true }

[dev-dependencies]
ckc-store = { path = "../ckc-store" }
tempfile = { workspace = true }
