# ckc-smt — FormalIR → SMT-LIB emission, solver-query planning, assertion-to-source maps,
# solver invocation, solver-result parsing (SPEC §3 crate table); built up unit by
# unit.
[package]
name = "ckc-smt"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
ckc-core = { path = "../ckc-core" }
serde.workspace = true
