[package]
name = "ckc-store"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
ckc-core = { path = "../ckc-core" }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
ckc-core = { path = "../ckc-core", features = [] }
schemars = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
