[package]
name = "ckc-store"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
ckc-core = { path = "../ckc-core" }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
