[package]
name = "ckc-term"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
ckc-core = { path = "../ckc-core" }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
unicode-normalization = { workspace = true }
egg = { workspace = true }
oxrdf = { workspace = true }
oxttl = { workspace = true }

[dev-dependencies]
ckc-store = { path = "../ckc-store" }
tempfile = { workspace = true }
